--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.0",
+    "@angular/cdk": "^17.0.0",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
@@ -18,6 +19,15 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@taiga-ui/addon-mobile": "^3.62.0",
+    "@taiga-ui/addon-table": "^3.62.0",
+    "@taiga-ui/addon-tablebars": "^3.62.0",
+    "@taiga-ui/cdk": "^3.62.0",
+    "@taiga-ui/core": "^3.62.0",
+    "@taiga-ui/icons": "^3.62.0",
+    "@taiga-ui/kit": "^3.62.0",
+    "@taiga-ui/layout": "^3.62.0",
+    "@taiga-ui/styles": "^3.62.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
