--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@taiga-ui/kit": "^3.62.0",
     "@taiga-ui/layout": "^3.62.0",
     "@taiga-ui/styles": "^3.62.0",
+    "prettier": "^3.2.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
