--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@ngrx/effects": "^17.1.0",
+    "@ngrx/store": "^17.1.0",
+    "@ngrx/store-devtools": "^17.1.0",
     "@taiga-ui/addon-mobile": "^3.62.0",
     "@taiga-ui/addon-table": "^3.62.0",
     "@taiga-ui/addon-tablebars": "^3.62.0",
