--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@ngrx/effects": "^17.1.0",
+    "@ngrx/router-store": "^17.1.0",
     "@ngrx/store": "^17.1.0",
     "@ngrx/store-devtools": "^17.1.0",
     "@taiga-ui/addon-mobile": "^3.62.0",
@@ -31,6 +32,7 @@
     "@taiga-ui/kit": "^3.62.0",
     "@taiga-ui/layout": "^3.62.0",
     "@taiga-ui/styles": "^3.62.0",
+    "axios": "^1.6.7",
     "prettier": "^3.2.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
