taiga added to build angular.json

--- a/angular.json
+++ b/angular.json
@@ -113,6 +113,9 @@
             "scripts": []
           }
         }
+      },
+      "cli": {
+        "analytics": "4ec48165-6fce-4659-92fd-19a105762c42"
       }
     }
   }
