--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@taiga-ui/layout": "^3.62.0",
     "@taiga-ui/styles": "^3.62.0",
     "axios": "^1.6.7",
+    "ngx-ellipsis": "^4.1.3",
     "prettier": "^3.2.4",
     "rxjs": "~7.8.0",
+    "textfit": "^2.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
