--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "statsboards-angular-legacy",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
