--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "axios": "^1.6.7",
     "ngx-ellipsis": "^4.1.3",
     "prettier": "^3.2.4",
+    "qrcode": "^1.5.3",
     "rxjs": "~7.8.0",
     "textfit": "^2.4.0",
     "tslib": "^2.3.0",
@@ -48,6 +49,7 @@
     "@angular/cli": "^17.0.10",
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/qrcode": "^1.5.5",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
