--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@taiga-ui/layout": "^3.62.0",
     "@taiga-ui/styles": "^3.62.0",
     "axios": "^1.6.7",
+    "ngx-device-detector": "^7.0.0",
     "ngx-ellipsis": "^4.1.3",
     "prettier": "^3.2.4",
     "qrcode": "^1.5.3",
