--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@taiga-ui/layout": "^3.62.0",
     "@taiga-ui/styles": "^3.62.0",
     "axios": "^1.6.7",
+    "http-proxy-middleware": "^3.0.3",
     "ngx-device-detector": "^7.0.0",
     "ngx-ellipsis": "^4.1.3",
     "prettier": "^3.2.4",
@@ -43,6 +44,8 @@
     "rxjs": "~7.8.0",
     "textfit": "^2.4.0",
     "tslib": "^2.3.0",
+    "vite": "^6.0.6",
+    "webpack": "^5.97.1",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
