--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,9 @@ services:
     volumes:
       - ./dist/statsboards-angular-legacy/browser:/usr/share/nginx/html
     ports:
-      - "8383:80"
+      - "8383:80"  # External mapping
+#    expose:
+#      - "80"       # Expose internal port
     networks:
       - frontend-network
       - backend-network
