--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,15 @@
 server {
-    listen 80;
+    listen 8383;
     server_name localhost;
 
     location / {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
+    }
+
+    location /health {
+        return 200 'Front Nginx is running';
+        add_header Content-Type text/plain;
     }
 }
