--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,7 +12,7 @@ services:
       logging: "promtail"
       logging_jobname: "frontend_prod_logs"
     container_name: statsboards-frontend
-    image: node:22.12.0-slim
+    image: node:22.12.0
     working_dir: /app
     volumes:
       - .:/app
