--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -7,5 +7,5 @@ RUN apk --no-cache add curl
 # Copy the Nginx config
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 
-# Expose the necessary ports
-EXPOSE 8383
+## Expose the necessary ports
+#EXPOSE 8383
