--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /health {
+    location = /front-nginx-health {
         return 200 'Front Nginx is running';
         add_header Content-Type text/plain;
     }
