--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -37,4 +37,9 @@ services:
       - backend-network
     depends_on:
       - angular-frontend
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -fs http://localhost/front-nginx-health | grep -q 'Front Nginx is running'" ]
+      interval: 30s
+      timeout: 5s
+      retries: 3
     restart: always
