--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,9 @@ server {
     }
 
     location = /front-nginx-health {
-        return 200 'Front Nginx is running';
         add_header Content-Type text/plain;
+        add_header Content-Disposition inline;
+        add_header X-Health-Status "ok";
+        return 200 'Front Nginx is running';
     }
 }
