--- a/nginx.conf
+++ b/nginx.conf
@@ -8,10 +8,18 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # Health check
     location = /front-nginx-health {
-        add_header Content-Type text/plain;
+        add_header Content-Type application/json;
         add_header Content-Disposition inline;
         add_header X-Health-Status "ok";
-        return 200 'Front Nginx is running';
+        return 200 '{"status": "ok", "service": "Front Nginx is running", "timestamp": "$time_iso8601"}';
     }
+
+#     location = /front-nginx-health {
+#         add_header Content-Type text/plain;
+#         add_header Content-Disposition inline;
+#         add_header X-Health-Status "ok";
+#         return 200 'Front Nginx is running';
+#     }
 }
