--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -38,7 +38,8 @@ services:
     depends_on:
       - angular-frontend
     healthcheck:
-      test: [ "CMD-SHELL", "curl -ksf https://localhost/front-nginx-health | grep -q 'Front Nginx is running'" ]
+      test: [ "CMD-SHELL", "curl -ks --fail http://localhost:8383/front-nginx-health | grep -q '\"status\": \"ok\"'" ]
+#      test: [ "CMD-SHELL", "curl -ksf https://localhost/front-nginx-health | grep -q 'Front Nginx is running'" ]
       interval: 30s
       timeout: 5s
       retries: 3
