--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -2,7 +2,7 @@
 FROM nginx:alpine
 
 # Install curl for health checks
-RUN apk --no-cache add jq curl
+RUN apk --no-cache add curl
 
 # Copy the Nginx config
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
