--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/qrcode": "^1.5.5",
     "jasmine-core": "~5.1.0",
+    "esbuild": ">=0.25.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
