--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "statsboards-angular-legacy",
   "version": "0.0.1",
+  "type": "module",
   "engines": {
     "node": ">=20.0.0"
   },
@@ -9,48 +10,49 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.2.14",
-    "@angular/cdk": "^20.2.14",
-    "@angular/common": "^20.2.14",
-    "@angular/compiler": "^20.2.14",
-    "@angular/core": "^20.2.14",
-    "@angular/forms": "^20.2.14",
-    "@angular/platform-browser": "^20.2.14",
-    "@angular/platform-browser-dynamic": "^20.2.14",
-    "@angular/router": "^20.2.14",
-    "@ngrx/effects": "^20.0.0",
-    "@ngrx/router-store": "^20.0.0",
-    "@ngrx/store": "^20.0.0",
-    "@ngrx/store-devtools": "^20.0.0",
+    "@angular/animations": "^21.0.4",
+    "@angular/cdk": "^21.0.4",
+    "@angular/common": "^21.0.4",
+    "@angular/compiler": "^21.0.4",
+    "@angular/core": "^21.0.4",
+    "@angular/forms": "^21.0.4",
+    "@angular/platform-browser": "^21.0.4",
+    "@angular/platform-browser-dynamic": "^21.0.4",
+    "@angular/router": "^21.0.4",
+    "@maskito/angular": "^3.11.1",
+    "@maskito/core": "^3.11.1",
+    "@maskito/kit": "^3.11.1",
+    "@maskito/phone": "^3.11.1",
+    "@ng-web-apis/common": "^4.14.0",
+    "@ng-web-apis/intersection-observer": "^4.14.0",
+    "@ng-web-apis/mutation-observer": "^4.14.0",
+    "@ng-web-apis/platform": "^4.14.0",
+    "@ng-web-apis/resize-observer": "^4.14.0",
+    "@ng-web-apis/screen-orientation": "^4.14.0",
+    "@ngrx/effects": "^21.0.1",
+    "@ngrx/router-store": "^21.0.1",
+    "@ngrx/store": "^21.0.1",
+    "@ngrx/store-devtools": "^21.0.1",
     "@taiga-ui/addon-mobile": "^4.66.0",
     "@taiga-ui/addon-table": "^4.66.0",
     "@taiga-ui/cdk": "^4.66.0",
     "@taiga-ui/core": "^4.66.0",
     "@taiga-ui/event-plugins": "^4.7.0",
+    "@taiga-ui/i18n": "^4.66.0",
     "@taiga-ui/icons": "^4.66.0",
     "@taiga-ui/kit": "^4.66.0",
     "@taiga-ui/layout": "4.66.0",
     "@taiga-ui/legacy": "4.66.0",
-    "@taiga-ui/styles": "^4.66.0",
-    "@taiga-ui/i18n": "^4.66.0",
     "@taiga-ui/polymorpheus": "^4.9.0",
-    "@ng-web-apis/common": "^4.14.0",
-    "@ng-web-apis/platform": "^4.14.0",
-    "@ng-web-apis/mutation-observer": "^4.14.0",
-    "@ng-web-apis/intersection-observer": "^4.14.0",
-    "@ng-web-apis/resize-observer": "^4.14.0",
-    "@ng-web-apis/screen-orientation": "^4.14.0",
-    "@maskito/core": "^3.11.1",
-    "@maskito/kit": "^3.11.1",
-    "@maskito/angular": "^3.11.1",
-    "@maskito/phone": "^3.11.1",
-    "libphonenumber-js": "^1.12.33",
+    "@taiga-ui/styles": "^4.66.0",
     "axios": "^1.11.1",
     "http-proxy-middleware": "^3.0.5",
+    "libphonenumber-js": "^1.12.33",
     "ngx-device-detector": "^10.0.2",
     "ngx-ellipsis": "^5.0.4",
     "prettier": "^3.2.4",
@@ -63,19 +65,27 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.2.14",
-    "@angular/cli": "^20.2.14",
-    "@angular/compiler-cli": "^20.2.14",
-    "@angular/language-service": "^20.2.14",
+    "@angular-devkit/build-angular": "^21.0.4",
+    "@angular-eslint/builder": "^21.1.0",
+    "@angular-eslint/eslint-plugin": "^21.1.0",
+    "@angular-eslint/eslint-plugin-template": "^21.1.0",
+    "@angular-eslint/template-parser": "^21.1.0",
+    "@angular/cli": "^21.0.4",
+    "@angular/compiler-cli": "^21.0.4",
+    "@angular/language-service": "^21.0.4",
+    "@ngrx/eslint-plugin": "^21.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/qrcode": "^1.5.5",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
+    "@typescript-eslint/parser": "^8.51.0",
     "esbuild": ">=0.25.0",
+    "eslint": "^9.39.2",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.2"
+    "typescript": "~5.9.0"
   }
 }
