feat(STAF-17): setup NgRx Entity foundation and utilities
- Install @ngrx/entity package
- Create entity adapter utility helper with generic types
- Create comprehensive migration guide document
- Update AGENTS.md with entity adapter patterns

Related: STAF-17

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ng-web-apis/resize-observer": "^4.14.0",
     "@ng-web-apis/screen-orientation": "^4.14.0",
     "@ngrx/effects": "^21.0.1",
+    "@ngrx/entity": "^21.0.1",
     "@ngrx/operators": "^21.0.1",
     "@ngrx/router-store": "^21.0.1",
     "@ngrx/store": "^21.0.1",
