feat: Implement hybrid Vitest browser/jsdom testing approach for STAF-37
- Install Playwright browser provider (@vitest/browser-playwright, playwright)
- Update angular.json test builder from Karma to Vitest unit-test
- Update build builder to @angular/build:application
- Fix TypeScript errors in season reducer tests
- Add npm test:browser script for Chromium mode
- Update AGENTS.md with hybrid testing commands

Test Results:
- jsdom mode: 537ms (26/26 tests passed)
- Chromium mode: 697ms (26/26 tests passed)
- Recommendation: jsdom for unit tests, Chromium for component tests

Closes: STAF-37

--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular/build:application",
           "options": {
             "allowedCommonJsDependencies": [
               "@taiga-ui/core",
@@ -116,14 +116,10 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular/build:unit-test",
           "options": {
-            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
-            "inlineStyleLanguage": "less",
-            "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.less"],
-            "scripts": []
+            "include": ["**/*.spec.ts"]
           }
         },
         "lint": {
